Lazy loading setup

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular6Customers</title>
+  <title>Lazy Loading</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,5 +10,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <app-root1></app-root1>
 </body>
 </html>
